--- a/src/browser.sass
+++ b/src/browser.sass
@@ -2,6 +2,10 @@ $main-padding: 0.5rem !default
 $theme-colour-text: #337ab7 !default
 
 div.rendered-react-keyed-file-browser
+  min-width: 800px
+  .name 
+    max-width: 500px
+    overflow: hidden
   div.action-bar
     margin-bottom: $main-padding
     flex-wrap: wrap
