--- a/src/browser.sass
+++ b/src/browser.sass
@@ -6,6 +6,8 @@ div.rendered-react-keyed-file-browser
   .name-file
     max-width: 500px
     overflow: hidden
+    a
+      display: flex
   div.action-bar
     margin-bottom: $main-padding
     flex-wrap: wrap
