--- a/src/browser.sass
+++ b/src/browser.sass
@@ -3,7 +3,7 @@ $theme-colour-text: #337ab7 !default
 
 div.rendered-react-keyed-file-browser
   min-width: 800px
-  .name-file
+  .name
     max-width: 500px
     overflow: hidden
     a
