--- a/src/browser.sass
+++ b/src/browser.sass
@@ -3,7 +3,7 @@ $theme-colour-text: #337ab7 !default
 
 div.rendered-react-keyed-file-browser
   min-width: 800px
-  font-family: time
+  font-family: 'Times New Roman', Times, serif
   .files
     max-height: calc(100vh - 114px)
     overflow: auto
